Fix spacing on all pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ram.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="author" content="Ramirm">
     <meta name="description" content="this is meta data put description of the website here!"/>
+    <meta name="keywords" content="RAM, RAM Solutions, RAM VA Solutions, VA, virtual assistant,"/>  
+    
     <title>RAM VA Solutions</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
