--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="this is meta data put description of the website here!"/>
     <meta name="keywords" content="RAM, RAM Solutions, RAM VA Solutions, VA, virtual assistant,"/>  
     
-    <title>RAM VA Solutions</title>
+    <title>KreiFos</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
